# Namsaraev_Zorigto

./: README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: test_masks.py  test_processing.py  test_widget.py
