[project]
name = "namsaraev-zorigto"
version = "0.1.0"
description = ""
authors = [
    {name = "nzorigto"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.0"
black = "^25.1.0"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.16.0"


[tool.black]


[tool.mypy]


[tool.isort]
force_single_line = true
